(raf) Core: Next/Prev via HPRM are now global (r733)
(raf) TextUI: Updated skins from Semtex199 (r733)
(raf) Core: Added new playmode "GLOBAL". When on this mode, when the last track of an album finishes, the player goes to the first track of the next album. (r734)
(raf) Core: Updated SHOUTcast db.xml to lastest as of 1-26-06 (r736)
(raf) Core: Added support for ID3 tags (v1 and v2) (r738/739)
BUG FIXES
(sandberg) 3DUI: The active item are now default selected when entering the option screen. (r728)
(sandberg) 3DUI: The program version is now only shown on the option screen when using the 3D UI (r727)
(sandberg) 3DUI: Fixed a couple of bug which caused the UI to read random data. (r730)
(sandberg) Core: Added check for buffer event, so they are only sent when there are changes. (r731)
(raf) Core: Fixed bug where HPRM would crash the localfiles screen (r733)
(raf) TextUI: Corrected problem where 12AM was being displayed as 00AM (r734)

0.38-Pre1 (r726) (2006-01-20)
NEW FEATURES
(sandberg) Core/3DUI: Merged the new TextUI3D into the main branch. (r712)
(sandberg) Core: Support for USB enabled/disabled events to the UIs has been added. (r712)
(raf) Core: Added code to sort all lists (localfiles/playlists/SHOUTcast listings) alphabetically in ascending order (r713)
(sandberg) 3DUI: Made the graphics in the new UI configurable, to allow new skins to be made. (r716)
(raf) Core Now duplicates are eliminated from SHOUTcast listing genres. Duplicates are looked for in case insensitive mode. (r717)
(raf) Core: Top 600 listing is now left unsorted (so it stays sorted by popularity). (r718)
(raf) TextUI: Clock format (12/24) is now retrieved from the system settings, and the config option is not used anymore. (r719)
(sandberg) 3DUI: New graphics from Semtex integrated. (r720)
(raf) Core: Now SHOUTcast Titles are parsed and corrected to display & instead of #amp; and the correct character for &#XX; (r721)